# agentic-flow

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
examples/: async_example.py  build_flask_app.py  claude_code_example.py  custom_models_example.py  shared_context_example.py  streaming_example.py
src/agenticflow/: __init__.py  async_orchestrator.py  claude_code.py  cli.py  langgraph_orchestrator.py  langgraph_state.py  models.py  orchestrator.py  retry.py
src/agenticflow/agents/: __init__.py  base.py  coder.py  planner.py  reviewer.py  tester.py
src/agenticflow/tools/: __init__.py  base.py  code_exec.py  file_io.py  git.py  http_client.py  shell.py  web_search.py
tests/: test_agent_base.py  test_async_orchestrator.py  test_claude_code.py  test_cli.py  test_git_tool.py  test_http_tool.py  test_langgraph_orchestrator.py  test_models.py  test_orchestrator.py  test_retry.py  test_shared_context.py  test_shell_tool.py  test_tools.py
workspace/: README.md  TEST_REPORT.md  is_prime.py  test_is_prime.py
