[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticflow"
version = "0.1.0"
description = "Multi-agent software engineering system powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
claude-code = [
    "claude-agent-sdk>=0.1.0",
]
langgraph = [
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.scripts]
agenticflow = "agenticflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
